examples/test/testpolicy2397.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2397
  namespace: namespace149
spec:
  podSelector:
    matchLabels:
      key15: value1
      key36: value20
      key16: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value11
      podSelector:
        matchLabels:
          key47: value29
